--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "bootstrap": "4.6",
+    "bootstrap-icons": "^1.11.3",
+    "countup.js": "^2.8.0",
+    "fslightbox": "^3.4.1",
+    "gsap": "^3.12.5",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -27,6 +34,7 @@
     "@angular/cli": "^18.0.4",
     "@angular/compiler-cli": "^18.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^20.14.9",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
