--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hls.js": "^1.5.13",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
+    "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "video.js": "^8.16.1",
     "zone.js": "~0.14.3"
@@ -38,6 +39,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/jquery": "^3.5.30",
     "@types/node": "^20.14.9",
+    "@types/toastr": "^2.1.43",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
