--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hls.js": "^1.5.13",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
+    "select2": "^4.1.0-rc.0",
     "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "video.js": "^8.16.1",
