--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "angular-datatables": "^18.0.0",
     "bootstrap": "4.6",
     "bootstrap-icons": "^1.11.3",
     "countup.js": "^2.8.0",
+    "datatables.net": "^2.1.4",
+    "datatables.net-dt": "^2.1.4",
     "fslightbox": "^3.4.1",
     "gsap": "^3.12.5",
     "hls.js": "^1.5.13",
@@ -37,6 +40,7 @@
     "@angular-devkit/build-angular": "^18.0.4",
     "@angular/cli": "^18.0.4",
     "@angular/compiler-cli": "^18.0.0",
+    "@types/datatables.net": "^1.12.0",
     "@types/jasmine": "~5.1.0",
     "@types/jquery": "^3.5.30",
     "@types/node": "^20.14.9",
