--- a/angular.json
+++ b/angular.json
@@ -45,15 +45,14 @@
               "node_modules/datatables.net-dt/css/dataTables.dataTables.min.css",
               "node_modules\\bootstrap-icons\\font\\bootstrap-icons.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
-              "node_modules/toastr/build/toastr.css",
-              "node_modules/select2/dist/css/select2.min.css"
+              "node_modules/toastr/build/toastr.css"
+              
 
             ],
             "scripts": [
               "node_modules/@fortawesome/fontawesome-free/js/all.min.js",
               "node_modules/fslightbox/index.js",
               "node_modules/toastr/build/toastr.min.js",
-              "node_modules/select2/dist/js/select2.min.js",
               "node_modules/datatables.net/js/dataTables.min.js"
 
             ]
