--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
-            "assets": [{
+            "assets": [
+              {
                 "glob": "**/*",
                 "input": "public"
               },
@@ -44,22 +45,18 @@
               "src/styles.css",
               "node_modules/datatables.net-dt/css/dataTables.dataTables.min.css",
               "node_modules\\bootstrap-icons\\font\\bootstrap-icons.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "node_modules/toastr/build/toastr.css"
-              
-
             ],
             "scripts": [
-              "node_modules/@fortawesome/fontawesome-free/js/all.min.js",
               "node_modules/fslightbox/index.js",
               "node_modules/toastr/build/toastr.min.js",
               "node_modules/datatables.net/js/dataTables.min.js"
-
             ]
           },
           "configurations": {
             "production": {
-              "budgets": [{
+              "budgets": [
+                {
                   "type": "initial",
                   "maximumWarning": "500kB",
                   "maximumError": "1MB"
@@ -76,10 +73,12 @@
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true,
-              "fileReplacements": [{
-                "replace": "src/environments/environment.ts",
-                "with": "src/environments/environment.development.ts"
-              }]
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -107,10 +106,12 @@
               "zone.js/testing"
             ],
             "tsConfig": "tsconfig.spec.json",
-            "assets": [{
-              "glob": "**/*",
-              "input": "public"
-            }],
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "public"
+              }
+            ],
             "styles": [
               "src/styles.css"
             ],
